tests/error/elif_after_else.c
// fail "'#elif' after '#else'."

#if 1

#else

#elif 1

#endif

